Video summaries no longer truncate the title and dateline.

--- a/localtv/static/localtv/front/sass/partials/modules/_video_summary.sass
+++ b/localtv/static/localtv/front/sass/partials/modules/_video_summary.sass
@@ -1,5 +1,6 @@
 .video-summary-details
-	height: $base-line-height * 5
+	min-height: $base-line-height * 4
+	margin-bottom: $base-line-height
 
 .timestamp-link
 	+small
