--- a/localtv/static/localtv/front/stylesheets/screen.css
+++ b/localtv/static/localtv/front/stylesheets/screen.css
@@ -182,7 +182,7 @@ form { margin-bottom: 18px; }
 @media screen and (max-width: 740px) { .grid-item { width: 50%; } }
 .replaced, .search-icon { text-indent: -9999px; display: block; }
 
-.search-icon { background-image: url('/static/localtv/front/images/glyphicons_027_search.png?1343954396'); background-size: 16px 16px; background-position: center center; background-repeat: no-repeat; width: 16px; height: 16px; }
+.search-icon { background-image: url('/static/localtv/front/images/glyphicons_027_search.png?1345166379'); background-size: 16px 16px; background-position: center center; background-repeat: no-repeat; width: 16px; height: 16px; }
 
 ul, ol { padding-left: 1.5em; }
 
@@ -213,7 +213,7 @@ ol > li { list-style-type: decimal; }
 @media screen and (max-width: 740px) and (min-width: 400px) { .media-grid-1 > li, .media-grid-2 > li, .media-grid-3 > li, .media-grid-4 > li { width: 50%; float: left; } }
 @media screen and (max-width: 400px) { .media-grid-1 > li, .media-grid-2 > li, .media-grid-3 > li, .media-grid-4 > li { width: 100%; float: none; } }
 
-.media-grid > #infscr-loading { float: none; clear: both; text-indent: -9999px; height: 66px; background: transparent url('/static/localtv/front/images/ajax-loader.gif?1343954396') center center no-repeat; }
+.media-grid > #infscr-loading { float: none; clear: both; text-indent: -9999px; height: 66px; background: transparent url('/static/localtv/front/images/ajax-loader.gif?1345166379') center center no-repeat; }
 
 .media-grid > #infscr-done { float: none; clear: both; height: 66px; font-size: 30px; line-height: 36px; font-weight: bold; margin-top: 18px; }
 
@@ -413,7 +413,7 @@ ol > li { list-style-type: decimal; }
 
 .video-large-description { margin-bottom: 18px; max-height: 90px; overflow: hidden; }
 
-.video-summary-details { height: 90px; }
+.video-summary-details { min-height: 72px; margin-bottom: 18px; }
 
 .timestamp-link { font-size: 11px; line-height: 18px; }
 
@@ -513,7 +513,7 @@ input:focus, textarea:focus { border-color: #344f6d; -webkit-box-shadow: 0 0 6px
 .message.warning { background-color: #fffcc5; border-color: #cfcc8f; text: #2c2a00; }
 
 /* precontent */
-.precontent { /* http://subtlepatterns.com/?p=1024 */ background: #343639 url('/static/localtv/front/images/classy_fabric.png?1343954396'); }
+.precontent { /* http://subtlepatterns.com/?p=1024 */ background: #343639 url('/static/localtv/front/images/classy_fabric.png?1345166379'); }
 
 .precontent a { color: #66ccff; }
 
